Fixed some image alignment and text

--- a/css/style.css
+++ b/css/style.css
@@ -7,29 +7,29 @@ a {
    src: url('../fonts/Ailerons-Typeface.otf');
 }
 .projects{
-  display: inline-block;
-  justify-content:space-between;
-  width: 100%;
+  display:flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
 }
 .project img{
   padding: 2px;
   color: #a5a5a5;
-display:inline-block;
 box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
-transition: box-shadow .3s;
+transition: box-shadow .5s;
 border-style: double;
 border-width: thick;
+
 }
 
 .project {
-  display: inline-block;
-height: 400px;
-width: 480px;
+height: 400px !important;
+width: 480px !important;
 padding:30px;
 }
 
 .project:hover img{
-  box-shadow: 0 40px 40px rgba(0, 0,0,0.5)
+  box-shadow: 0 40px 40px rgba(0, 0,0,0.5);
+
 }
 
 .navbar-custom {
@@ -49,7 +49,7 @@ padding:30px;
   font-weight: 800;
   color: #E5E5E5;
   font-family: myFont;
-  font-size: 30px;
+  font-size: 40px;
 }
 .navbar-custom .navbar-header .navbar-toggle {
   color: #E5E5E5;
@@ -192,6 +192,10 @@ h3,h4 {
 	text-align:left;
   color:#E5E5E5;
 }
+
+h4 {
+  font-size: 1.6em;
+}
 /*
 .crop img {
   height:auto;
@@ -322,35 +326,7 @@ hr.small {
 }
 */
 
-.carousel-control {
-	top:50%;
-	width:auto;
-	height:1em;
-	background:transparent;
-}
-.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right {
-	position:static;
-	display:block;
-	width:auto;
-	top: 50%;
-}
-.carousel-control .glyphicon-chevron-left:before {
-	margin-left:0;
-  top: 50%;
-}
 
-.carousel-inner{
-  display: inline-block;
-  height: 100%;
-  max-width: 500px;
-  max-height: 500px !important;
-  min-width: 227px;
-  min-height: 100%;
-  border-radius: 1% !important;
-  z-index: 1000;
-  margin-bottom: 50px;
-
-}
 .index-thumb{
   box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
 	max-width: 227px;
@@ -364,16 +340,6 @@ hr.small {
 	/*max-width: 227px;*/
 }
 
-.carousel-inner .active.left {
-	left: -20%;
-}
-.carousel-inner .next {
-	left: 20%;
-}
-.carousel-control.left,.carousel-control.right {
-	background-image:none;
-	padding: 0% 5% 0% 5%;
-}
 
 img {
  width: 100%;
@@ -424,7 +390,7 @@ footer {
     margin: 0;
     padding: 0;
     font-family: myFont;
-    font-size: 2em;
+    font-size: 4em;
     font-weight: 100;
     letter-spacing: 15px;
     text-align: center;
